resized logo and added navigation bar

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
    <h1>Rent a Car</h1> 
+
+   <nav class="navbar">
+    <ul>
+        <li ><a href="index.html"><img class="logo-nav" src="images/logo.webp" alt="logo"></a></li>
+        <li>Login</li>
+        <li>Services</li>
+        <li>Help</li>
+        <li>Menu</li>
+    </ul>
+
+   </nav>
 </body>
 </html>
