added background image and removed heading

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <title>Car Rental</title>
 </head>
 <body>
-   <h1>Rent a Car</h1> 
+    <div class="car-background">
 
    <nav class="navbar">
     <ul>
-        <li ><a href="index.html"><img class="logo-nav" src="images/logo.webp" alt="logo"></a></li>
-        <li>Login</li>
-        <li>Services</li>
-        <li>Help</li>
-        <li>Menu</li>
+        <li><a href="index.html"><img class="logo-nav" src="images/logo.webp" alt="logo"></a></li>
+        <li><a href="index.html">Login</a></li>
+        <li><a href="index.html">Services</a></li>
+        <li><a href="index.html">Help</a></li>
+        <li><a href="index.html">Menu</a></li>
     </ul>
 
    </nav>
+</div>
 </body>
 </html>
